--- a/surf.html
+++ b/surf.html
@@ -80,7 +80,7 @@
         <img class="img" src="https://img.redbull.com/images/c_crop,w_2500,h_1667,x_0,y_0,f_auto,q_auto/c_scale,w_1500/redbullcom/2019/09/05/c2ea806b-bf89-494a-ad2f-dc2a3edb7d0a/no-contest-tahiti-empty-teahupoo-beast" alt="">
       </main>
       <aside>
-        <h3 id="polynesia">Tahiti - Franch Polynesia</h3>
+        <h3 id="polynesia">Tahiti - French Polynesia</h3>
         <p>Tahiti is a gorgeous place to visit in the South Pacific.  With its black sand beaches, lagoons, waterfalls, two extinct volcanoes, the island of Tahiti is a popular vacation destination, particularly for honeymoons. Tahiti is the largest island in French Polynesia, which is a set of islands located in the South Pacific Ocean, approximately halfway between Australia and California.  Tahiti is home to the city of Papeete which is the capital of French Polynesia. French Polynesia is part of the French Overseas Collectivities (or Collectivité d’Outre Mer in French) which means it is one of the French overseas territories which have specific status and institutions.  Therefore you should absolutely add Tahiti to your France Bucket List!</p>
         <div id="back"><button><a href="#top">&#8593; Back to the top</a></button></div>
       </aside>
