updates about resize before deploy

--- a/surf.html
+++ b/surf.html
@@ -30,7 +30,7 @@
       </main>
       <aside>
         <h3 id="australia">Snapper Rocks - Australia</h3>
-        <p>Snapper Rocks is a small rocky outcrop on the northern side of Point Danger at the southern end of Rainbow Bay on the Gold Coast, Queensland, Australia. It is a famous surf break and today the start of the large sand bank known to surfers as the Superbank. Since 1995 the Tweed River sand bypass system has pumped sand from the Tweed River mouth to beaches to the north to ensure the river mouth is safe for shipping, and to stabilise coastal erosion north of the river. This has resulted in a large build-up of sand between Snapper Rocks to Kirra, which as of 2007, has extended the beaches in this area seawards around 100-200m, and created a new, world-class sandbar surf break called "the Superbank". </p>
+        <p>Snapper Rocks is a small rocky outcrop on the northern side of Point Danger at the southern end of Rainbow Bay on the Gold Coast, Queensland, Australia. It is a famous surf break and today the start of the large sand bank known to surfers as the Superbank. Since 1995 the Tweed River sand bypass system has pumped sand from the Tweed River mouth to beaches to the north to ensure the river mouth is safe for shipping, and to stabilise coastal erosion north of the river.  </p>
         <div id="back"><button><a href="#top">&#8593; Back to the top</a></button></div>
       </aside>
       <main>
@@ -39,8 +39,7 @@
       <aside>
         <h3 id="brazil">Rio de Janeiro - Brazil</h3>
         <p>Two things are certain at the Oi Rio Pro every year: the crowd is the biggest we see on Tour and     Brazilian competitors have a strong showing here compared to other events.
-            Other less-than-certain-but-still-very-possible scenarios include: Kelly Slater pulling out of the event to go surf Cloudbreak; the event getting moved to another beach because of water pollution; and ‘#worldshameleague’ starts trending on Instagram after a Brazilian is knocked out by an Australian surfer. Also, get used to the word ‘Deus’, you’ll be hearing it a lot.
-            A couple of things to consider when making your picks for this event. The end section is critical to getting a good score. Should surfers go big here, they’ll be rewarded accordingly.</p>
+            Other less-than-certain-but-still-very-possible scenarios include: Kelly Slater pulling out of the event to go surf Cloudbreak; the event getting moved to another beach because of water pollution; and ‘#worldshameleague’ starts trending on Instagram after a Brazilian is knocked out by an Australian surfer. Also, get used to the word ‘Deus’, you’ll be hearing it a lot.</p>
             <div id="back"><button><a href="#top">&#8593; Back to the top</a></button></div>
       </aside>
       <main>
@@ -56,7 +55,7 @@
       </main>
       <aside>
         <h3 id="portugal">Peniche - Portugal</h3>
-        <p>MEO Rip Curl Pro Portugal formerly known as Moche Rip Curl Pro Portugal or Rip Curl Pro Portugal is a professional surfing competition of the WSL World Tour held every year in October at the Supertubos beach in Peniche, Portugal. The event was first founded in 2009 as Rip Curl Search Portugal. The defending men's champion is the Brazilian surfer Italo Ferreira who won the event both in 2018 and 2019, being the first back-to-back winner ever on the event. The defending women's champion is the American surfer Caroline Marks, the youngest winner ever on the event. Wins her second Championship Tour tournament of her career.
+        <p>MEO Rip Curl Pro Portugal formerly known as Moche Rip Curl Pro Portugal or Rip Curl Pro Portugal is a professional surfing competition of the WSL World Tour held every year in October at the Supertubos beach in Peniche, Portugal. The event was first founded in 2009 as Rip Curl Search Portugal. The defending men's champion is the Brazilian surfer Italo Ferreira who won the event both in 2018 and 2019, being the first back-to-back winner ever on the event. The defending women's champion is the American surfer Caroline Marks, the youngest winner ever on the event. 
              </p>
              <div id="back"><button><a href="#top">&#8593; Back to the top</a></button></div>
       </aside>
@@ -65,7 +64,7 @@
       </main>
       <aside>
         <h3 id="france">Seignosse - France</h3>
-        <p>Hossegor surf might take the headlines, but the pros will often slink away to the Seignosse breaks when they’re working. Why? Well, this small beach town is home to some of the gnarliest, most fantastic beach breaks the world can offer. Move over Supertubos, the peaks here are wedgy, hollow, fast and consistent. They form on sandbanks that line the shore just out at sea. That means they are prone to some changes, particularly after storm season, although things stay pretty steady from season to season on at the main spots. In addition to that, Seignosse surf spreads northeast along Landes’ coast, meaning this one really gets the full whack from those winter NW swells. It’s often big. Real big. </p>
+        <p>Hossegor surf might take the headlines, but the pros will often slink away to the Seignosse breaks when they’re working. Why? Well, this small beach town is home to some of the gnarliest, most fantastic beach breaks the world can offer. Move over Supertubos, the peaks here are wedgy, hollow, fast and consistent. They form on sandbanks that line the shore just out at sea. That means they are prone to some changes, particularly after storm season, although things stay pretty steady from season to season on at the main spots. In addition to that, Seignosse surf spreads northeast along Landes’ coast, meaning this one really gets the full whack from those winter NW swells.  </p>
         <div id="back"><button><a href="#top">&#8593; Back to the top</a></button></div>
       </aside>
       <main>
@@ -73,7 +72,7 @@
       </main>
       <aside>
         <h3 id="africa">Jeffreys Bay - South Africa</h3>
-        <p>The Corona Open J-Bay 2019 was the sixth event of the Men's Championship Tour in the 2019 World Surf League. It took place from 9 to 19 July at Jeffreys Bay in Eastern Cape, South Africa, and was contested by 36 surfers. In an all-Brazilian final, Gabriel Medina defeated Italo Ferreira to win the 13th Championship Tour event of his career. He also became the first goofy foot surfer to win the J-Bay Open since 1984. A new competition format was introduced for the 2019 Championship Tour. All 36 surfers take part in the Seeding Round. The top two surfers in each heat advance directly to the Round of 32, while the lowest-placed surfer in each heat enters the Elimination Round.</p>
+        <p>The Corona Open J-Bay 2019 was the sixth event of the Men's Championship Tour in the 2019 World Surf League. It took place from 9 to 19 July at Jeffreys Bay in Eastern Cape, South Africa, and was contested by 36 surfers. In an all-Brazilian final, Gabriel Medina defeated Italo Ferreira to win the 13th Championship Tour event of his career. He also became the first goofy foot surfer to win the J-Bay Open since 1984. </p>
         <div id="back"><button><a href="#top">&#8593; Back to the top</a></button></div>
       </aside>
       <main>
@@ -81,7 +80,7 @@
       </main>
       <aside>
         <h3 id="polynesia">Tahiti - French Polynesia</h3>
-        <p>Tahiti is a gorgeous place to visit in the South Pacific.  With its black sand beaches, lagoons, waterfalls, two extinct volcanoes, the island of Tahiti is a popular vacation destination, particularly for honeymoons. Tahiti is the largest island in French Polynesia, which is a set of islands located in the South Pacific Ocean, approximately halfway between Australia and California.  Tahiti is home to the city of Papeete which is the capital of French Polynesia. French Polynesia is part of the French Overseas Collectivities (or Collectivité d’Outre Mer in French) which means it is one of the French overseas territories which have specific status and institutions.  Therefore you should absolutely add Tahiti to your France Bucket List!</p>
+        <p>Tahiti is a gorgeous place to visit in the South Pacific.  With its black sand beaches, lagoons, waterfalls, two extinct volcanoes, the island of Tahiti is a popular vacation destination, particularly for honeymoons. Tahiti is the largest island in French Polynesia, which is a set of islands located in the South Pacific Ocean, approximately halfway between Australia and California.  Tahiti is home to the city of Papeete which is the capital of French Polynesia. French Polynesia is part of the French Overseas Collectivities (or Collectivité d’Outre Mer in French) which means it is one of the French overseas territories which have specific status and institutions.  </p>
         <div id="back"><button><a href="#top">&#8593; Back to the top</a></button></div>
       </aside>
       <footer>
