--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
       </main>
       <aside>
         <h3 id="brazil">Rio de Janeiro - Brazil</h3>
-        <p>Two things are certain at the Oi Rio Pro every year: the crowd is the biggest we see on Tour and     Brazilian competitors have a strong showing here compared to other events.
-            Other less-than-certain-but-still-very-possible scenarios include: Kelly Slater pulling out of the event to go surf Cloudbreak; the event getting moved to another beach because of water pollution; and ‘#worldshameleague’ starts trending on Instagram after a Brazilian is knocked out by an Australian surfer. Also, get used to the word ‘Deus’, you’ll be hearing it a lot.</p>
+        <p>Two things are certain at the Oi Rio Pro every year: the crowd is the biggest we see on Tour and Brazilian competitors have a strong showing here compared to other events. Other less-than-certain-but-still-very-possible scenarios include: Kelly Slater pulling out of the event to go surf Cloudbreak; the event getting moved to another beach because of water pollution; and ‘#worldshameleague’ starts trending on Instagram after a Brazilian is knocked out by an Australian surfer. Also, get used to the word ‘Deus’, you’ll be hearing it a lot.</p>
             <div id="back"><button><a href="#top">&#8593; Back to the top</a></button></div>
       </aside>
       <main>
