--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="header">
       <h1 id="top">World Surf League Locations</h1>
       <nav>
-        <div>
+        <div class="nav">
           <button class="btn"><a href="#australia">Australia</a></button>
           <button><a href="#brazil">Brazil</a></button>
           <button><a href="#usa">Usa</a></button>
