node installed and JSON added

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         to the north to ensure the river mouth is safe for shipping, and to
         stabilise coastal erosion north of the river.
       </p>
-      <div id="back-to-top">
+      <div class="back-to-top">
         <button><a href="#top">&#8593; Back to the top</a></button>
       </div>
     </aside>
@@ -67,7 +67,7 @@
         knocked out by an Australian surfer. Also, get used to the word ‘Deus’,
         you’ll be hearing it a lot.
       </p>
-      <div id="back-to-top">
+      <div class="back-to-top">
         <button><a href="#top">&#8593; Back to the top</a></button>
       </div>
     </aside>
@@ -91,7 +91,7 @@
         religion. A cash economy was created, people had less free time, and
         Protestant Missionaries discouraged the practice.
       </p>
-      <div id="back-to-top">
+      <div class="back-to-top">
         <button><a href="#top">&#8593; Back to the top</a></button>
       </div>
     </aside>
@@ -114,7 +114,7 @@
         the American surfer Caroline Marks, the youngest winner ever on the
         event.
       </p>
-      <div id="back-to-top">
+      <div class="back-to-top">
         <button><a href="#top">&#8593; Back to the top</a></button>
       </div>
     </aside>
@@ -138,7 +138,7 @@
         northeast along Landes’ coast, meaning this one really gets the full
         whack from those winter NW swells.
       </p>
-      <div id="back-to-top">
+      <div class="back-to-top">
         <button><a href="#top">&#8593; Back to the top</a></button>
       </div>
     </aside>
@@ -158,7 +158,7 @@
         Ferreira to win the 13th Championship Tour event of his career. He also
         became the first goofy foot surfer to win the J-Bay Open since 1984.
       </p>
-      <div id="back-to-top">
+      <div class="back-to-top">
         <button><a href="#top">&#8593; Back to the top</a></button>
       </div>
     </aside>
@@ -182,7 +182,7 @@
         French) which means it is one of the French overseas territories which
         have specific status and institutions.
       </p>
-      <div id="back-to-top">
+      <div class="back-to-top">
         <button><a href="#top">&#8593; Back to the top</a></button>
       </div>
     </aside>
